[package]
name = "etherscan-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
diesel = { version = "^2.1.4", features = ["postgres", "serde_json", "nightly-error-messages"] }
dotenvy = "^0.15.7"
env_logger = "^0.11.0"
eyre.workspace = true
foundry-block-explorers.workspace = true
log = "^0.4.20"
serde_json.workspace = true
tokio = { version = "^1.35.1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
pkg-config = "^0.3.29"
